--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ justify-content: center;
 }
 #navMb.activeNav{
     right: 0;
+    display: block;
 }
 .nav-li{
     list-style: none;
@@ -159,16 +160,17 @@ grid-row-gap: 0px;
     .navbar-items{
         position: absolute;
         top: 0;
-        right: -60vw;
+        right: 0;
         width: 60vw;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: all 200ms ease-out;
+       
     }
     .navbar-item{
-        display: block;
+         display: none;
         width: 100%;
         height: 100%;
         flex-direction: column;
